# Rose-RAT

./: .gitignore  .replit  LICENSE  README.md  attacker_client.py  config.json  ftest.py  guisocket.js  index.html  main.py  pyproject.toml  requirements.txt
roseui/: msg.txt  v8.py
