[tool.poetry]
name = "repl_nix_Rose-RAT"
version = "0.1.0"
description = ""
authors = ["Replit user <<>>"]

[tool.poetry.dependencies]
python = "^3.10"
dhooks = "^1.1.4"
eventlet = "^0.33.3"
pystyle = "^2.9"
socketio = "^0.2.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
